force-app/main/default/objects/PH_Alert_Rule__c/PH_Alert_Rule__c.object-meta.xml
<CustomObject>
    <label>Alert Rule</label>
    <pluralLabel>Alert Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>