force-app/main/default/objects/PH_Alert_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Query</fullName><default>false</default><label>Query</label></value>
            <value><fullName>Transaction</fullName><default>false</default><label>Transaction</label></value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
</CustomField>