force-app/main/default/objects/PH_Alert_Rule__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <label>Threshold</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>1</scale>
    <required>true</required>
</CustomField>