force-app/main/default/objects/PH_Alert_Rule__c/fields/Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Window_Days__c</fullName>
    <label>Window (days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>7</fullName><default>true</default><label>7</label></value>
            <value><fullName>30</fullName><default>false</default><label>30</label></value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
</CustomField>